fixes alignment

--- a/src/breakdown/static/scss/modules/formmodules/formcheckbox/_formcheckbox.scss
+++ b/src/breakdown/static/scss/modules/formmodules/formcheckbox/_formcheckbox.scss
@@ -9,7 +9,7 @@
   }
 
   .formcheckbox-x-text {
-    align-items: center;
+    align-items: flex-start;
     color: $color-secondary;
     cursor: pointer;
     display: flex;
